# pathvalidate

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.rst  appveyor.yml  make_deb_package.sh  mypy.ini  pylama.ini  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  on_push_default_branch.yml  permissions_advisor.yml  release.yml  tests.yml
.travis/: install.sh  run_test.sh
debian/: changelog  control  copyright  pathvalidate.manpages  rules
docs/: Makefile  conf.py  index.rst  make.bat  make_readme.py
docs/pages/: CHANGELOG.md  changelog_ref.rst  installation.rst  links.rst  sponsors.rst
docs/pages/examples/: argparse.rst  argparse_sanitizer.txt  argparse_validator.txt  click.rst  click_sanitizer.txt  click_validator.txt  index.rst  is_valid.rst  is_valid_filename_code.txt  is_valid_filepath_code.txt  sanitize.rst  sanitize_file_path.rst  sanitize_file_path_code.txt  sanitize_filename_code.txt  sanitize_filepath_code.txt  sanitize_replace_symbol_code.txt  sanitize_var_name.rst  sanitize_var_name_code.txt  validate.rst  validate_file_path_code.txt  validate_filename_code.txt  validate_filepath_code.txt  validate_var_name_code.txt  validator.rst  validator_argparse.txt  validator_click.txt
docs/pages/introduction/: badges.txt  cli.txt  feature.txt  index.rst  installation.rst  summary.txt
docs/pages/reference/: error.rst  function.rst  handler.rst  index.rst  platform.txt  tips.rst  types.rst
examples/: README.rst  argparse_sanitize.py  argparse_validate.py  click_sanitize.py  click_validate.py  pathvalidate.ipynb  pathvalidate_examples.ipynb
ipynb/: pathvalidate.ipynb
ipynb/.ipynb_checkpoints/: pathvalidate-checkpoint.ipynb
misc/: summary.txt
pathvalidate/: __init__.py  __version__.py  _app.py  _base.py  _common.py  _const.py  _error.py  _file.py  _filename.py  _filepath.py  _interface.py  _js_var_name.py  _ltsv.py  _python_var_name.py  _six.py  _sqlite.py  _symbol.py  _var_name.py  argparse.py  click.py  error.py  handler.py
pathvalidate/variable/: __init__.py  _base.py  _elasticsearch.py  _javascript.py  _python.py
requirements/: docs_requirements.txt  requirements.txt  test_requirements.txt
test/: _common.py  test_argparse.py  test_click.py  test_common.py  test_elasticsearch.py  test_error.py  test_excel.py  test_file.py  test_filename.py  test_filepath.py  test_handler.py  test_js_var_name.py  test_ltsv.py  test_pathvalidate.py  test_python_var_name.py  test_sqlite.py  test_symbol.py  test_var_name.py
